WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235956
[GTK][WPE] Fixes for non-unified builds after
r288807
and
r288820
https://bugs.webkit.org/show_bug.cgi?id=235956
Summary
[GTK][WPE] Fixes for non-unified builds after r288807 and r288820
Pablo Saavedra
Reported
2022-02-01 08:38:00 PST
SSIA Related-to: *
https://bugs.webkit.org/show_bug.cgi?id=235872
*
https://bugs.webkit.org/show_bug.cgi?id=218284
Attachments
patch
(3.96 KB, patch)
2022-02-01 08:40 PST
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
patch
(3.93 KB, patch)
2022-02-01 08:44 PST
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pablo Saavedra
Comment 1
2022-02-01 08:40:04 PST
Created
attachment 450533
[details]
patch
Pablo Saavedra
Comment 2
2022-02-01 08:44:42 PST
Created
attachment 450534
[details]
patch
EWS
Comment 3
2022-02-01 11:26:42 PST
Found 1 new test failure: fast/canvas/canvas-direction.html
EWS
Comment 4
2022-02-01 12:33:44 PST
Committed
r288905
(
246647@main
): <
https://commits.webkit.org/246647@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450534
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-02-01 12:34:20 PST
<
rdar://problem/88342848
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug