[GTK][WPE] Fixes for non-unified builds after r288807 and r288820 https://bugs.webkit.org/show_bug.cgi?id=235956

Reviewed by Mark Lam.

Source/JavaScriptCore:

* runtime/FunctionHasExecutedCache.h:

Source/WebCore:

* bindings/js/ScriptModuleLoader.cpp:
(WebCore::rejectWithFetchError):

Source/WTF:

* wtf/GenericHashKey.h:



Canonical link: https://commits.webkit.org/246647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288905 268f45cc-cd09-0410-ab3c-d52691b4dbfc