Source/JavaScriptCore/runtime/FunctionHasExecutedCache.h
@@ -27,6 +27,8 @@
 
 #include "SourceID.h"
 #include <wtf/GenericHashKey.h>
+#include <wtf/HashMap.h>
+#include <wtf/HashTraits.h>
 #include <wtf/Vector.h>
 
 namespace JSC {
